# DeepCall

./: README.md  check_backend.py  check_db.py  check_tables.py  check_version.py  create_friend_tables.py  debug_auth.py  debug_cors.py  debug_livekit.py  docker-compose.yml  init_db.py  list_routes.py  package-lock.json  pyproject.toml  seed_db.py  test_friend_request.py  test_friends_complete.py  verify_api.py
.agent/workflows/: run.md
alembic/: env.py
alembic/versions/: 03fa246f08de_initial_tables.py  4312a74d6f66_add_invite_model.py  6f86433d607f_add_moderation_tables.py  7e4212347e1d_add_readstate_model.py  95306c0f05e4_add_user_preferences.py  d0e85591057e_add_friendship_and_direct_message_models.py  d3bd85e4fd25_add_reply_to_id_to_direct_messages.py  e69a5eb5cd24_add_user_notification_settings.py  e966364f74a1_add_attachments_and_edited_flag.py  f8a9b8a6a7ac_add_server_roles_members.py
app/: main.py
app/api/: api.py  attachments.py  auth.py  channels.py  deps.py  dms.py  friends.py  invites.py  livekit.py  moderation.py  read_states.py  servers.py  users.py  websockets.py
app/core/: config.py  database.py  permissions.py  security.py
frontend/: package-lock.json  package.json  tailwind.config.js
scripts/: fix_constraints.py  migrate_db.py
uploads/: 068c40ce-0862-4de6-9b3d-4b0283e40cc7.lnk  3fffbcb9-5c08-4e90-b4c3-732634a1a2d7.md  88a85a68-8f25-487e-8b2f-23979fcd30fa.webm  8db24dc0-ff28-499a-960c-ad10b25a9e32.webm  b3341fc3-9677-42b9-a944-e5725706188d.webm  c5a247eb-01a9-4cf2-874c-4198ccdd325e.webm  d699819b-86fc-4acb-a8ea-b4230954a573.py
(+34 files in other folders)
